# fairino_ue5

./: .env  Dockerfile  README.md  docker-compose.yml
FairinoProgram/: system.txt
RCsimulation/: RCsimulation.Build.cs  RCsimulation.cpp  ROS2UEConnector.cpp  ROS2UEConnector.h
frcobot_ros2_main/fairino10_v6_moveit2_config/config/: fairino10_v6_robot.ros2_control.xacro
frcobot_ros2_main/fairino16_v6_moveit2_config/config/: fairino16_v6_robot.ros2_control.xacro  warehouse_ros_mongo.yaml
frcobot_ros2_main/fairino20_v6_moveit2_config/config/: fairino20_v6_robot.ros2_control.xacro
frcobot_ros2_main/fairino30_v6_moveit2_config/config/: fairino30_v6_robot.ros2_control.xacro
frcobot_ros2_main/fairino3_v6_moveit2_config/config/: fairino3_v6_robot.ros2_control.xacro  fairino3_v6_robot.urdf.xacro  robot_stand.stl  stl_marker_pub.py  z-efg-100.xacro
frcobot_ros2_main/fairino3_v6_moveit2_config/launch/: rviz_hardware.launch.py
frcobot_ros2_main/fairino3mt_v6_moveit2_config/config/: fairino3mt_v6_robot.ros2_control.xacro
frcobot_ros2_main/fairino5_v6_moveit2_config/config/: fairino5_v6_robot.ros2_control.xacro  stl_marker_pub.py  z-efg-130.xacro
frcobot_ros2_main/fairino5_v6_moveit2_config/launch/: rviz_hardware.launch.py
frcobot_ros2_main/fairino_description/meshes/: z-efg-100.stl  z-efg-130.stl
frcobot_ros2_main/fairino_hardware/: package.xml
modbus_rest_gateway/: .env
modbus_rest_gateway/app/: main.py  modbus_client.py  requirements.txt
ros2_ue_connector_node/: CMakeLists.txt  package.xml
ros2_ue_connector_node/src/: ros2_ue_connector.cpp
(+5 files in other folders)
